--- a/pki/src/main/resources/static/html/create_certificate.html
+++ b/pki/src/main/resources/static/html/create_certificate.html
@@ -80,7 +80,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="custom-control custom-checkbox">
-							    <input type="checkbox" class="custom-control-input" id="defaultUnchecked">
+							    <input type="checkbox" class="custom-control-input" id="defaultUnchecked" checked="checked" disabled="disabled">
 							    <label class="custom-control-label" for="defaultUnchecked">CA</label>
 							</div>
 						</div>
