--- a/pki/src/main/resources/static/html/create_certificate.html
+++ b/pki/src/main/resources/static/html/create_certificate.html
@@ -62,6 +62,57 @@
 					</div>
 					<br/>
 					<div class="row">
+						<div class="col-md-6">
+							<label>ORGANIZATION:</label>
+							<label id="o"></label>
+						</div>
+						<div class="col-md-6">
+							<label>ORGANIZATION UNIT:</label>
+							<label id="ou"></label>
+						</div>
+					</div>
+					<br/>
+					<div class="row">
+						<div class="col-md-6">
+							<label>GIVEN NAME:</label>
+							<label id="gn"></label>
+						</div>
+						<div class="col-md-6">
+							<label>SURNAME:</label>
+							<label id="sn"></label>
+						</div>
+					</div>
+					<br/>
+					<div class="row">
+						<div class="col-md-6">
+							<label>COMMON NAME:</label>
+							<label id="cn"></label>
+						</div>
+						<div class="col-md-6">
+							<label>EMAIL:</label>
+							<label id="e"></label>
+						</div>
+					</div>
+					<br/>
+					<div class="row">
+						<div class="col-md-6">
+							<label>COUNTRY CODE:</label>
+							<label id="c"></label>
+						</div>
+						<div class="col-md-6">
+							<label>STATE:</label>
+							<label id="s"></label>
+						</div>
+					</div>
+					<br/>
+					<div class="row">
+						<div class="col-md-6">
+							<label>LOCALITY:</label>
+							<label id="l"></label>
+						</div>
+					</div>
+					<br/><br/>
+					<div class="row">
 						<div class="col-md-5">
 							<div class="form-group">
 								<label>Date from*</label>
