gui: revoke certificate

--- a/pki/src/main/resources/static/html/admin_show_all.html
+++ b/pki/src/main/resources/static/html/admin_show_all.html
@@ -102,6 +102,35 @@
         </div>
     </div>
     <!-- Central Modal Medium Success-->
+    
+    <!--Modal: modalConfirmDelete-->
+  <div class="modal fade" id="modalConfirmRevoke" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-sm modal-notify modal-danger" role="document">
+    <!--Content-->
+    <div class="modal-content text-center">
+      <!--Header-->
+      <div class="modal-header d-flex justify-content-center">
+        <p class="heading">Are you sure you want to revoke the certificate?</p>
+      </div>
+
+      <!--Body-->
+      <div class="modal-body">
+
+        <i class="fas fa-times fa-4x animated rotateIn"></i>
+
+      </div>
+
+      <!--Footer-->
+      <div class="modal-footer flex-center">
+        <a href="" class="btn  btn-outline-danger" id="yes_revoke">Yes</a>
+        <a type="button" class="btn  btn-danger waves-effect" data-dismiss="modal" id="no_revoke">No</a>
+      </div>
+    </div>
+    <!--/.Content-->
+  </div>
+</div>
+<!--Modal: modalConfirmDelete-->
 
 	<script type="text/javascript" src="../../lib/mdb/js/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
