--- a/pki/src/main/resources/static/html/subject_show_all.html
+++ b/pki/src/main/resources/static/html/subject_show_all.html
@@ -15,6 +15,8 @@
 </head>
 <body>
 
+	<div id="div_alert" style="position: fixed; top: 73px; right: 20px; width: 24%; z-index: 9999; border-radius: 0px"></div>
+
 	<div id="showAll" class="container w-100 mt-5 pt-3 mb-4">
 		<div class="row">
 			<div class="col p-4">
@@ -31,7 +33,6 @@
 						      <th scope="col">Start date</th>
 						      <th scope="col">End date</th>
 						      <th scope="col">CA</th>
-						      <th scope="col">Is valid</th>
 						      <th scope="col">Is revoked</th>
 						    </tr>
 						  </thead>
