refactor:delete user info page

--- a/pki/src/main/resources/static/html/subject_show_all.html
+++ b/pki/src/main/resources/static/html/subject_show_all.html
@@ -17,7 +17,7 @@
 
 	<div id="div_alert" style="position: fixed; top: 73px; right: 20px; width: 24%; z-index: 9999; border-radius: 0px"></div>
 
-	<div id="showAll" class="container w-100 mt-5 pt-3 mb-4">
+	<div id="showAll" class="container-xl w-100 mt-5 pt-3 mb-4">
 		<div class="row">
 			<div class="col p-4">
                 <div class="card">
@@ -30,11 +30,19 @@
 						<table class="table">
 						  <thead>
 						    <tr>
+						     <th scope="col">Organization</th>
+						      <th scope="col">Organization unit</th>
+						      <th scope="col">Common name</th>
+						      <th scope="col">Given name</th>
+						      <th scope="col">Surname</th>
+						      <th scope="col">Email</th>
+						      <th scope="col">Country code</th>
+						      <th scope="col">State</th>
+						      <th scope="col">Locality</th>
 						      <th scope="col">Start date</th>
 						      <th scope="col">End date</th>
 						      <th scope="col">CA</th>
 						      <th scope="col">Is revoked</th>
-						    </tr>
 						  </thead>
 						  <tbody id="certificates">
 						  </tbody>
