--- a/pki/src/main/resources/static/html/create_certificate.html
+++ b/pki/src/main/resources/static/html/create_certificate.html
@@ -212,7 +212,7 @@
 					</div>
 					<br/>
 					
-					<div class="row">
+					<div class="row" style="margin-left:10px;">
 						<div class="col-md-12">
 							<div class="custom-control custom-checkbox">
 							    <input type="checkbox" class="custom-control-input" id="isCa" checked="checked" disabled="disabled">
