feat:modify validations and fix key store reader

--- a/pki/src/main/resources/static/html/create_certificate.html
+++ b/pki/src/main/resources/static/html/create_certificate.html
@@ -135,7 +135,7 @@
 					<div class="row" id="subDirAttrDiv" hidden="true">
 						<div class="col-md-6">
 							<label>Enter date of birth*</label>
-							<input id="birthDate" class="form-control" type="text" placeholder="Date of birth">
+							<input id="birthDate" class="form-control" type="date" placeholder="Date of birth">
 						</div>
 						<div class="col-md-6">
 							<label>Enter the place of birth*:</label>
