--- a/pki/src/main/resources/static/html/create_certificate.html
+++ b/pki/src/main/resources/static/html/create_certificate.html
@@ -47,7 +47,7 @@
 					
 					<div class="row">
 						<div class="col-md-12">
-							<label>Choose template*</label>
+							<label>Choose extension*</label>
 							<select class="form-control" id="templates">
 							</select>
 						</div>
