--- a/pki/src/main/resources/static/html/login.html
+++ b/pki/src/main/resources/static/html/login.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="../../lib/mdb/css/mdb.min.css" rel="stylesheet">
-<title>Home page</title>
+<title>Log In</title>
 </head>
 <body>
 
@@ -36,7 +36,7 @@
                                     <label for="email" class="text-secondary form-label">Email *</label>
                                     <input placeholder="Enter Your email" type="text" class="form-control" id="email" name="email" required>
                                     <div class="invalid-feedback">
-                                        Please enter a email.
+                                        Please enter an email.
                                     </div>
                                 </div>
                             </div>
