feat:permission based authorization added

--- a/pki/src/main/resources/static/html/registration.html
+++ b/pki/src/main/resources/static/html/registration.html
@@ -53,7 +53,7 @@
                             
                             <div class="form-row">
                                 <div class="form-group col">
-                                    <label for="passwordRepeat" class="text-secondary">Password *</label>
+                                    <label for="passwordRepeat" class="text-secondary">Repeat Password *</label>
                                     <input type="password" placeholder="Repeat Your password" class="form-control" name="passwordRepeat" id="passwordRepeat" required>
                                     <div class="invalid-feedback">
                                         Please repeat a password.
@@ -68,7 +68,7 @@
 
             <div class="row">
                 <div class="col p-4">
-                    <input type="submit" class="btn btn-success btn-lg btn-block mb-4" value="Login" id="login">
+                    <input type="submit" class="btn btn-success btn-lg btn-block mb-4" value="Register" id="register">
                 </div>
             </div>
 
