--- a/pki/src/main/resources/static/html/registration.html
+++ b/pki/src/main/resources/static/html/registration.html
@@ -63,7 +63,7 @@
                                     <label class="form-check-label" style="color:red;" id="pswLength">5. Password length should be at least 10.</label><br/>
 									</div>
                                 </div>
-                            </div>
+                            </div><br/>
                             
                             <div class="form-row">
                                 <div class="form-group col">
