--- a/pki/src/main/resources/static/html/login.html
+++ b/pki/src/main/resources/static/html/login.html
@@ -66,7 +66,7 @@
         
 		<div class="row">
 			<div class="col p-4">
-				<label class="text-secondary">If your activation link expired, enter your username and click here:</label>
+				<label class="text-secondary">If your activation link expired, enter your email and click here:</label>
 				<input type="button" class="btn btn-success btn-lg btn-block mb-4" onclick="sendNewLink()" value="send new link" id="login">
 			</div>
 		</div>
