fix:validation at front and back

--- a/pki/src/main/resources/static/html/change_password.html
+++ b/pki/src/main/resources/static/html/change_password.html
@@ -33,19 +33,29 @@
                                 <div class="form-group col">
                                     <label for="new-password" class="text-secondary">New password *</label>
                                     <input type="password" placeholder="Enter Your password" class="form-control" name="new-password" id="new-password" required>
-                                    <div class="invalid-feedback">
-                                        Please enter a password.
-                                    </div>
+                                    <label id="pswDescription"></label>
                                 </div>
                         </div>
+                        
                         <div class="form-row">
                                 <div class="form-group col">
-                                    <label for="confirm-password" class="text-secondary">Confirm new password *</label>
-                                    <input type="password" placeholder="Enter Your password" class="form-control" name="confirm-password" id="confirm-password" required>
-                                    <div class="invalid-feedback">
-                                        Please enter a password.
-                                    </div>
+                                    <label for="password" class="text-secondary">Password rules</label><br/>
+                                    <div style="margin-left:10px;">
+                                    <label class="form-check-label" style="color:red;" id="numCharacter">1. Must have at least one numeric character.</label><br/>
+                                    <label class="form-check-label" style="color:red;" id="lowercaseCharacter">2. Must have at least one lowercase character.</label><br/>
+                                    <label class="form-check-label" style="color:red;" id="uppercaseCharacter">3. Must have at least one uppercase character.</label><br/>
+                                    <label class="form-check-label" style="color:red;" id="specialSymbol">4. Must have at least one special symbol.</label><br/>
+                                    <label class="form-check-label" style="color:red;" id="pswLength">5. Password must contain a length of at least 10 characters and a maximum of 32 characters.</label><br/>
+									</div>
                                 </div>
+                            </div><br/>
+                        
+                        <div class="form-row">
+                             <div class="form-group col">
+                                 <label for="confirm-password" class="text-secondary">Confirm new password *</label>
+                                 <input type="password" placeholder="Enter Your password" class="form-control" name="confirm-password" id="confirm-password" required>
+                                 <label id="pswRepeatDescription"></label>
+                             </div>
                          </div>
 
                         </div>
@@ -69,27 +79,5 @@
 	<script type="text/javascript" src="../../js/navbars/unauthenticated_user.js"></script>
 	<script type="text/javascript" src="../../js/change_password.js"></script>
 	
-    <script>
-        // Example starter JavaScript for disabling form submissions if there are invalid fields
-        (function () {
-            'use strict';
-            window.addEventListener('load', function () {
-                // Fetch all the forms we want to apply custom Bootstrap validation styles to
-                var forms = document.getElementsByClassName('needs-validation');
-                // Loop over them and prevent submission
-                var validation = Array.prototype.filter.call(forms, function (form) {
-                    form.addEventListener('submit', function (event) {
-                        $("form#logging_in").removeClass("unsuccessful");
-                        if (form.checkValidity() === false) {
-                            event.preventDefault();
-                            event.stopPropagation();
-                            $("form#logging_in").addClass("unsuccessful");
-                        }
-                        form.classList.add('was-validated');
-                    }, false);
-                });
-            }, false);
-        })();
-    </script>
 </body>
 </html>
