--- a/pki/src/main/resources/static/html/registration.html
+++ b/pki/src/main/resources/static/html/registration.html
@@ -60,7 +60,7 @@
                                     <label class="form-check-label" style="color:red;" id="lowercaseCharacter">2. Must have at least one lowercase character.</label><br/>
                                     <label class="form-check-label" style="color:red;" id="uppercaseCharacter">3. Must have at least one uppercase character.</label><br/>
                                     <label class="form-check-label" style="color:red;" id="specialSymbol">4. Must have at least one special symbol.</label><br/>
-                                    <label class="form-check-label" style="color:red;" id="pswLength">5. Password length should be at least 10.</label><br/>
+                                    <label class="form-check-label" style="color:red;" id="pswLength">5. Password must contain a length of at least 10 characters and a maximum of 32 characters.</label><br/>
 									</div>
                                 </div>
                             </div><br/>
