fix-registration:frontend validation

--- a/pki/src/main/resources/static/html/registration.html
+++ b/pki/src/main/resources/static/html/registration.html
@@ -38,6 +38,7 @@
                                     <div class="invalid-feedback">
                                         Please enter an email.
                                     </div>
+                                     <label id="emailDescription"></label>
                                 </div>
                             </div>
 
