--- a/pki/src/main/resources/static/html/password_recovery.html
+++ b/pki/src/main/resources/static/html/password_recovery.html
@@ -42,6 +42,7 @@
                                     <div class="invalid-feedback">
                                         Please enter an email.
                                     </div>
+                                     <label id="emailDescription"></label>
                                 </div>
                             </div>
 
